Minor UI improvement

--- a/FindMeARoom/Base.lproj/Main.storyboard
+++ b/FindMeARoom/Base.lproj/Main.storyboard
@@ -104,10 +104,10 @@
             </objects>
             <point key="canvasLocation" x="1087" y="429"/>
         </scene>
-        <!--Details View Controller-->
+        <!--Room Details-->
         <scene sceneID="QjR-Vp-O5s">
             <objects>
-                <tableViewController id="wzd-f2-kul" customClass="DetailsViewController" customModule="FindMeARoom" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Room Details" id="wzd-f2-kul" customClass="DetailsViewController" customModule="FindMeARoom" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="Wfl-wO-hbu">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
